AUTOMAKE_OPTIONS = gnu subdir-objects
AM_CFLAGS=-std=gnu99 -fstrict-aliasing
bin_PROGRAMS = mirb
mirb_SOURCES = main.c \
    compiler/generator/disassembly.c \
    compiler/generator/generator.c \
    compiler/generator/x86.c \
    compiler/parser/calls.c \
    compiler/parser/control_flow.c \
    compiler/parser/parser.c \
    compiler/parser/structures.c \
    compiler/allocator.c \
    compiler/ast.c \
    compiler/block.c \
    compiler/bytecode.c \
    compiler/compiler.c \
    compiler/lexer.c \
    runtime/classes/array.c \
    runtime/classes/bool.c \
    runtime/classes/class.c \
    runtime/classes/exception.c \
    runtime/classes/fixnum.c \
    runtime/classes/module.c \
    runtime/classes/object.c \
    runtime/classes/proc.c \
    runtime/classes/string.c \
    runtime/classes/symbol.c \
    runtime/modules/kernel.c \
    runtime/classes.c \
    runtime/code_heap.c \
    runtime/constant.c \
    runtime/method.c \
    runtime/runtime.c \
    runtime/support.c \
    runtime/x86.c


